--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -11,7 +11,7 @@
       <!-- Right -->
       <div class="flex items-center space-x-6 text-lg">
         <span class="text-2xl">
-        <a href="https://github.com/yourusername"
+        <a href="https://github.com/shivampimple29"
            target="_blank"
            class="hover:text-emerald-600 transition">
           <i class="fa-brands fa-github"></i>
@@ -19,7 +19,7 @@
         </span>
 
         <span class="text-2xl">
-          <a href="https://linkedin.com/in/yourusername"
+          <a href="https://www.linkedin.com/in/shivam-pimple-894201316"
            target="_blank"
            class="hover:text-emerald-600 transition">
           <i class="fa-brands fa-linkedin"></i>
