--- a/views/features/home.ejs
+++ b/views/features/home.ejs
@@ -11,13 +11,15 @@
     <h1 class="text-3xl sm:text-4xl lg:text-[2.7rem] 
                font-semibold text-gray-900 leading-tight">
       Welcome to 
-      <span class="bg-gradient-to-t from-emerald-400 to-teal-600 bg-clip-text text-transparent">
+      <span class="inline-block mb-1 bg-gradient-to-t from-emerald-400 to-teal-600 bg-clip-text text-transparent">
         ManageX
       </span>
       <br class="hidden sm:block">
-      Simplify User Management
+      <div>      
+        Simplify User Management
       <br class="hidden sm:block">
       Empower Your Team
+      </div>
     </h1>
 
     <p class="text-gray-600 max-w-xl font-semibold 
@@ -114,7 +116,7 @@
           </h2>
         </div>
 
-        <div class="bg-gradient-to-t from-purple-500 to-purple-700 text-white p-4 rounded-lg text-xl">
+        <div class="bg-gradient-to-t from-purple-400 to-purple-700 text-white p-4 rounded-lg text-xl">
           <i class="fa-solid fa-layer-group"></i>
         </div>
       </div>
