inserted github repo link in footer

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -11,7 +11,7 @@
       <!-- Right -->
       <div class="flex items-center space-x-6 text-lg">
         <span class="text-2xl">
-        <a href="https://github.com/shivampimple29"
+        <a href="https://github.com/shivampimple29/ManageX"
            target="_blank"
            class="hover:text-emerald-600 transition">
           <i class="fa-brands fa-github"></i>
